# tflite_cpp_template

./: CMakeLists.txt  README.md  main.cpp
